--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <script>
           
-         function h1(){
+         function(){
            var typed = new Typed('#typed',{
                      strings: [
                      "do you nom the spicy ",
