--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                    typeSpeed: 30,
                    loop: true,
                    shuffle: false,
-                   showCursor: false,
+                   showCursor: true,
                    
                  });
 
